// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditFilterToken when initialized with a value matches the snapshot 1`] = `
<div
  config="[object Object]"
  fetchitem="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  fetchsuggestions="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  getitemname="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  id="filtered-search-token"
  value="[object Object]"
>
  <div
    class="view"
  >
    <gl-avatar-stub
      alt="An item name's avatar"
      class="gl-mr-2"
      entityid="0"
      entityname=""
      shape="circle"
      size="16"
      src=""
    />
    
      
    
  </div>
   
  <div
    class="suggestions"
  >
    <span
      class="dropdown-item"
    >
      No matching foo found.
    </span>
  </div>
</div>
`;

exports[`AuditFilterToken when initialized without a value matches the snapshot 1`] = `
<div
  config="[object Object]"
  fetchitem="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  fetchsuggestions="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  getitemname="function mockConstructor() {
        return fn.apply(this, arguments);
      }"
  id="filtered-search-token"
  value="[object Object]"
>
  <div
    class="view"
  />
   
  <div
    class="suggestions"
  >
    <gl-filtered-search-suggestion-stub
      value="1"
    >
      <div
        class="d-flex"
      >
        <gl-avatar-stub
          alt="A suggestion name's avatar"
          entityid="1"
          entityname="A suggestion name"
          shape="circle"
          size="32"
          src="www"
        />
         
        <div />
      </div>
    </gl-filtered-search-suggestion-stub>
  </div>
</div>
`;
